--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.9.2",
     "react-select": "^5.10.2",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
