--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview --port 3002",
+    "start": "npm run serve",
+    "build:prod": "npm run build && npm run serve"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
