--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_BASE_URL=https://xgsm.itfuturz.in
+# VITE_BASE_URL=https://t9hr21z3-3200.inc1.devtunnels.ms
 VITE_USER_ROUTE=web
 VITE_ADMIN_ROUTE=admin
 # VITE_IMAGE_PATH=https://pickndeliver.itfuturz.in
