--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@hookform/resolvers": "^5.2.2",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "apexcharts": "^4.1.0",
@@ -33,13 +34,15 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.63.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.9.2",
     "react-select": "^5.10.2",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0",
     "swiper": "^11.2.3",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
