solve product edit time issue

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # VITE_BASE_URL=https://xgsm.itfuturz.in
-# VITE_BASE_URL=http://localhost:3200
-VITE_BASE_URL=https://t9hr21z3-3200.inc1.devtunnels.ms
+VITE_BASE_URL=http://localhost:3200
+# VITE_BASE_URL=https://t9hr21z3-3200.inc1.devtunnels.ms
 VITE_USER_ROUTE=web
 VITE_ADMIN_ROUTE=admin
 # VITE_IMAGE_PATH=https://pickndeliver.itfuturz.in
